Prevents page height from overflowing.

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 
 .wrapper {
 	width: 95%;
-	height: 100%;
+	height: 95%;
 
 	margin: 0 auto;
 	padding: 42px;
